# ClassroomSystem

./: check_client_db.py  check_db.py  check_db2.py  test_sync.py
ClassroomServer/: CMakeLists.txt  ClassroomServer.pro  check_send_size.py  init_db.py  main.cpp  server_data.db  serverwindow.cpp  serverwindow.h
ClassroomSignSystem/: CMakeLists.txt  CMakeLists_test.txt  DatabaseManager.h  main.cpp  mainwindow.cpp  mainwindow.h  manual_sync.py  networkworker.cpp  networkworker.h  test_db.cpp
